Feature/pn 1429 notification cost (#92)